# whatsapp-personal-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  main.py
app/ai/: nlp_parser.py  speech_to_text.py
app/api/: whatsapp_webhook.py
app/config/: settings.py
app/domain/: conversation_history.py  processed_message.py  reminder.py
app/infrastructure/: audio_handler.py  database.py  scheduler.py  twilio_calls.py  twilio_whatsapp.py
app/usecases/: __init__.py  reminder_service.py
app/utils/: time.py
tests/: conftest.py  test_nlp_parser.py  test_reminder_service.py  test_whatsapp_webhook.py
