[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-assistant"
version = "1.0.0"
description = "WhatsApp Personal Reminder Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "twilio>=8.13.0",
    "openai>=1.12.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pydub>=0.25.1",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
]
